force-app/main/default/objects/AssetRelationship/fields/AssignedDealer__c.field-meta.xml
<CustomField>
    <fullName>AssignedDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssignedDealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Relationships (AssignedDealer)</relationshipLabel>
    <relationshipName>Vehicle_Ownership2</relationshipName>
    <type>Lookup</type>
</CustomField>