force-app/main/default/objects/AssetRelationship/fields/AZXPlanFlag__c.field-meta.xml
<CustomField>
    <fullName>AZXPlanFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AZX Plan Flag</label>
    <type>Checkbox</type>
</CustomField>