force-app/main/default/objects/AssetRelationship/fields/ContributionMargin__c.field-meta.xml
<CustomField>
    <fullName>ContributionMargin__c</fullName>
    <label>Contribution Margin</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>