force-app/main/default/objects/AssetRelationship/fields/CurrentOwnerFlag__c.field-meta.xml
<CustomField>
    <fullName>CurrentOwnerFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Owner Flag</label>
    <type>Checkbox</type>
</CustomField>