force-app/main/default/objects/AssetRelationship/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Relationships</relationshipLabel>
    <relationshipName>Vehicle_Ownership</relationshipName>
    <type>Lookup</type>
</CustomField>