force-app/main/default/objects/AssetRelationship/fields/DelaershipReportedSaleDate__c.field-meta.xml
<CustomField>
    <fullName>DelaershipReportedSaleDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delaership Reported Sale Date</label>
    <type>DateTime</type>
</CustomField>