force-app/main/default/objects/AssetRelationship/fields/DisposalInd__c.field-meta.xml
<CustomField>
    <fullName>DisposalInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disposal Indicator</label>
    <type>Checkbox</type>
</CustomField>