force-app/main/default/objects/AssetRelationship/fields/DisposalSourceCode__c.field-meta.xml
<CustomField>
    <fullName>DisposalSourceCode__c</fullName>
    <label>Disposal Source Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>