force-app/main/default/objects/AssetRelationship/fields/DisposalTypeCode__c.field-meta.xml
<CustomField>
    <fullName>DisposalTypeCode__c</fullName>
    <label>Disposal Type Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>