force-app/main/default/objects/AssetRelationship/fields/DriverInd__c.field-meta.xml
<CustomField>
    <fullName>DriverInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Indicator</label>
    <type>Checkbox</type>
</CustomField>