force-app/main/default/objects/AssetRelationship/fields/EspInd__c.field-meta.xml
<CustomField>
    <fullName>EspInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esp Indicator</label>
    <type>Checkbox</type>
</CustomField>