force-app/main/default/objects/AssetRelationship/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Unique Identifier. Composed as concatenation of Customer Id (SCA ID) and Vehicle Id (VIN).</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>