force-app/main/default/objects/AssetRelationship/fields/FinancerInd__c.field-meta.xml
<CustomField>
    <fullName>FinancerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financer Indicator</label>
    <type>Checkbox</type>
</CustomField>