force-app/main/default/objects/AssetRelationship/fields/FinContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>FinContractEndDate__c</fullName>
    <label>FinContract End Date</label>
    <type>DateTime</type>
</CustomField>