force-app/main/default/objects/AssetRelationship/fields/FinContractNumMonths__c.field-meta.xml
<CustomField>
    <fullName>FinContractNumMonths__c</fullName>
    <label>FinContract Num Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>