force-app/main/default/objects/AssetRelationship/fields/FinContractNumPayments__c.field-meta.xml
<CustomField>
    <fullName>FinContractNumPayments__c</fullName>
    <label>FinContract Num Payments</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>