force-app/main/default/objects/AssetRelationship/fields/FinContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>FinContractStartDate__c</fullName>
    <label>FinContract Start Date</label>
    <type>DateTime</type>
</CustomField>