force-app/main/default/objects/AssetRelationship/fields/FMCCLeasePurchaseFlag__c.field-meta.xml
<CustomField>
    <fullName>FMCCLeasePurchaseFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FMCC Lease/Purchase Flag</label>
    <type>Checkbox</type>
</CustomField>