force-app/main/default/objects/AssetRelationship/fields/FMCCRetailPurchaseFlag__c.field-meta.xml
<CustomField>
    <fullName>FMCCRetailPurchaseFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FMCC Retail Purchase Flag</label>
    <type>Checkbox</type>
</CustomField>