force-app/main/default/objects/AssetRelationship/fields/GlobalSalesTypeCode__c.field-meta.xml
<CustomField>
    <fullName>GlobalSalesTypeCode__c</fullName>
    <label>Global Sales Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>