force-app/main/default/objects/AssetRelationship/fields/GrossRevenue__c.field-meta.xml
<CustomField>
    <fullName>GrossRevenue__c</fullName>
    <label>Gross Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>