force-app/main/default/objects/AssetRelationship/fields/IsOnHHOnlineAccount__c.field-meta.xml
<CustomField>
    <fullName>IsOnHHOnlineAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On HH Online Account</label>
    <type>Checkbox</type>
</CustomField>