force-app/main/default/objects/AssetRelationship/fields/IsOnOwnerOnlineAccount__c.field-meta.xml
<CustomField>
    <fullName>IsOnOwnerOnlineAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Owner Online Account</label>
    <type>Checkbox</type>
</CustomField>