force-app/main/default/objects/AssetRelationship/fields/LTVServiceRank__c.field-meta.xml
<CustomField>
    <fullName>LTVServiceRank__c</fullName>
    <label>LTV Service Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>