force-app/main/default/objects/AssetRelationship/fields/NetRevenue__c.field-meta.xml
<CustomField>
    <fullName>NetRevenue__c</fullName>
    <label>Net Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>