force-app/main/default/objects/AssetRelationship/fields/OwnerInd__c.field-meta.xml
<CustomField>
    <fullName>OwnerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Indicator</label>
    <type>Checkbox</type>
</CustomField>