force-app/main/default/objects/AssetRelationship/fields/PrimaryConsumerInd__c.field-meta.xml
<CustomField>
    <fullName>PrimaryConsumerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Consumer Indicator</label>
    <type>Checkbox</type>
</CustomField>