force-app/main/default/objects/AssetRelationship/fields/SellingDealer__c.field-meta.xml
<CustomField>
    <fullName>SellingDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Relationships (Selling Dealer)</relationshipLabel>
    <relationshipName>Vehicle_Ownership1</relationshipName>
    <type>Lookup</type>
</CustomField>