force-app/main/default/objects/AssetRelationship/fields/ServicerInd__c.field-meta.xml
<CustomField>
    <fullName>ServicerInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicer Indicator</label>
    <type>Checkbox</type>
</CustomField>