force-app/main/default/objects/AssetRelationship/fields/vehAsgnDealerReassignDate__c.field-meta.xml
<CustomField>
    <fullName>vehAsgnDealerReassignDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Assigned Dealer Reassigned Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>