force-app/main/default/objects/AssetRelationship/fields/VehicleOwnershipCycleNum__c.field-meta.xml
<CustomField>
    <fullName>VehicleOwnershipCycleNum__c</fullName>
    <label>Vehicle Ownership Cycle Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>