force-app/main/default/objects/AssetRelationship/fields/WarrantyStartDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyStartDate__c</fullName>
    <label>Warranty Start Date</label>
    <type>DateTime</type>
</CustomField>